--- a/frontend/src/app/admin/admin.component.html
+++ b/frontend/src/app/admin/admin.component.html
@@ -22,7 +22,7 @@
         <td>{{ user.gender }}</td>
         <td>
           <button (click)="acceptUser(user)">Accept</button>
-          <button (click)="declineUser(user)">Decline</button>
+          <button class="declineButton" (click)="declineUser(user)">Decline</button>
         </td>
       </tr>
     </tbody>
