--- a/frontend/src/app/decor/decor-maintenance/decor-maintenance.component.html
+++ b/frontend/src/app/decor/decor-maintenance/decor-maintenance.component.html
@@ -39,7 +39,7 @@
                   </div>
                 <div class="refuse-box">
                   <input #refusalComment type="text" placeholder="Enter refusal comment" />
-                  <button (click)="cancelAppointment(appointment, refusalComment.value)">Refuse</button>
+                  <button class="declineButton" (click)="cancelAppointment(appointment, refusalComment.value)">Refuse</button>
                 </div>
               </div>
             </td>
