--- a/frontend/src/app/decor/decor-appointments/decor-appointments.component.css
+++ b/frontend/src/app/decor/decor-appointments/decor-appointments.component.css
@@ -7,7 +7,7 @@ table {
 }
 
 thead tr {
-  background-color: #48CAE4;
+  background-color: #89ca63;
   color: #ffffff;
   text-align: left;
   font-weight: bold;
@@ -42,8 +42,10 @@ a:hover {
   text-decoration: underline;
 }
 
+
+
 button {
-  background-color: #48CAE4;
+  background-color: #5ae448;
   color: white;
   border: none;
   padding: 10px 20px;
@@ -52,7 +54,23 @@ button {
 }
 
 button:hover {
-  background-color: #ef476f;
+  background-color: #41c230;
+}
+.declineButton{
+  background-color: #f7567c;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  border-radius: 5px;
+}
+.declineButton:hover{
+  background-color: #e14a6d;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  border-radius: 5px;
 }
 
 textarea, input[type="number"], input[type="text"] {
