--- a/frontend/src/app/garden-canvas/garden-canvas.component.html
+++ b/frontend/src/app/garden-canvas/garden-canvas.component.html
@@ -1,17 +1,19 @@
-<div>
+<div class="garden-container">
   <h2>Design Your Garden</h2>
-  <button (click)="selectShape('smallGreenSquare')">Small green square (bush)</button>
-  <button (click)="selectShape('largeBlueRectangle')">Large blue rectangle (pool)</button>
-  <button (click)="selectShape('largeBlueCircle')">Large blue circle (fountain)</button>
-  <button (click)="selectShape('smallBrownCircle')">Small brown circle (tree)</button>
-  <button (click)="selectShape('smallGrayRectangle')">Small gray rectangle (chairs/loungers)</button>
-  <br>
-  <label for="shapeSize">Size:</label>
-  <input id="shapeSize" type="number" [(ngModel)]="shapeSize" min="1" max="100">
-  <label for="shapeColor">Color:</label>
-  <input id="shapeColor" type="color" [(ngModel)]="shapeColor">
-  <br>
+  <div class="button-group">
+    <button (click)="selectShape('smallGreenSquare')">Small green square (bush)</button>
+    <button (click)="selectShape('largeBlueRectangle')">Large blue rectangle (pool)</button>
+    <button (click)="selectShape('largeBlueCircle')">Large blue circle (fountain)</button>
+    <button (click)="selectShape('smallBrownCircle')">Small brown circle (tree)</button>
+    <button (click)="selectShape('smallGrayRectangle')">Small gray rectangle (chairs/loungers)</button>
+    <button class="rotateButton" (click)="rotateShapes()">Rotate Shapes</button>
+  </div>
+  <div class="controls">
+    <label for="shapeSize">Size:</label>
+    <input id="shapeSize" type="number" [(ngModel)]="shapeSize" min="1" max="100">
+    <label for="shapeColor">Color:</label>
+    <input id="shapeColor" type="color" [(ngModel)]="shapeColor">
+  </div>
   <input type="file" (change)="loadGardenLayout($event)">
   <canvas id="gardenCanvas" width="800" height="600" (click)="onCanvasClick($event)" (mousemove)="onCanvasMouseMove($event)"></canvas>
-  <br>
 </div>
