--- a/frontend/src/app/layout/header/header.component.html
+++ b/frontend/src/app/layout/header/header.component.html
@@ -1,12 +1,15 @@
 <div class="header">
   <button class="toggle-button" (click)="toggleSidebar()">☰</button>
   <img src="assets/images/auth/vmvb-removebg-preview.png" alt="image" class="header-image" />
-
+  
   <div class="user-info">
-    <img src="assets/images/auth/gear.png" alt="User Icon" class="user-icon" (click)="toggleMenu()" />
+    <icon-gear (click)="toggleMenu()"></icon-gear> 
     <div class="menu" *ngIf="menuOpen">
       <ul>
-        <li (click)="logout()">Logout</li>
+        <li *ngIf="!isCurrentPath('/dashboard/main_page'); else SignInTemplate" (click)="logout()">Logout</li>
+        <ng-template #SignInTemplate>
+          <li (click)="logout()">Return to Sign In</li>
+        </ng-template>
       </ul>
     </div>
   </div>
