--- a/frontend/src/app/login/login.component.css
+++ b/frontend/src/app/login/login.component.css
@@ -79,16 +79,47 @@ body {
   }
   
   /* Submit button */
-  button[type="submit"] {
+  
+  
+
+  .modern-button {
     width: 100%;
     padding: 0.75rem;
-    border: 0;
-    border-radius: 0.25rem;
-    color: white;
-    background-image: linear-gradient(to right, #4facfe 0%, #00f2fe 100%);
+    border: 2px solid #118AB2;
+    border-radius: 5px;
+    color: #fff;
+    background-color: #118AB2;
     cursor: pointer;
+    font-size: 1em;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-style: italic;
+    transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.modern-button:hover {
+    background-color: #0d6c8a;
+    color: #fff;
+}
+
+
+  .modern-link {
+    text-align: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 1em;
+    color: rgba(0, 0, 0, 0.407);
+    font-style: italic;
+    text-decoration: none;
+    padding: 0.5em 1em;
+    border: 2px solid rgba(0, 0, 0, 0.407);
+    border-radius: 5px;
+    transition: background-color 0.3s ease, color 0.3s ease;
   }
   
+  .modern-link:hover {
+    background-color: rgba(0, 0, 0, 0.407);
+    color: #fff;
+  }
+
   /* Additional styles for positioning and responsiveness */
   @media (min-width: 768px) {
     .bg-image-2 {
