--- a/frontend/src/app/mainpage/mainpage.component.css
+++ b/frontend/src/app/mainpage/mainpage.component.css
@@ -39,7 +39,7 @@ h1 {
 }
 
 .search-bar button {
-    background-color: #48CAE4;
+    background-color: #5ae448;
     color: white;
     border: none;
     padding: 10px 20px;
@@ -49,7 +49,7 @@ h1 {
 }
 
 .search-bar button:hover {
-    background-color: #ef476f;
+    background-color: #41c230;
 }
 
 table {
@@ -61,7 +61,7 @@ table {
 }
 
 thead tr {
-    background-color: #48CAE4;
+    background-color: #89ca63;
     color: #ffffff;
     text-align: left;
     font-weight: bold;
