--- a/frontend/src/app/owner/owner-companies/owner-companies.component.css
+++ b/frontend/src/app/owner/owner-companies/owner-companies.component.css
@@ -7,7 +7,7 @@ table {
 }
 
 thead tr {
-  background-color: #48CAE4;
+  background-color: #89ca63;
   color: #ffffff;
   text-align: left;
   font-weight: bold;
@@ -97,4 +97,38 @@ a:hover {
   left: 0;
   width: 25%;
   overflow: hidden;
+}
+
+ .companies {
+  padding: 20px;
+}
+
+.search-bar {
+  display: flex;
+  gap: 10px;
+  margin-bottom: 20px;
+}
+
+.search-bar input {
+  flex: 1;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+}
+
+.search-bar button {
+  background-color: #5ae448;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  border-radius: 4px;
+  transition: background-color 0.3s;
+}
+
+.search-bar button:hover {
+  background-color: #41c230;
+}
+.clickable {
+  cursor: pointer;
 }
