--- a/frontend/src/app/owner/owner-companies/owner-companies.component.html
+++ b/frontend/src/app/owner/owner-companies/owner-companies.component.html
@@ -1,33 +1,40 @@
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Address</th>
-      <th>Average Rating</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let company of companies">
-      <td>
-        <a [routerLink]="['/dashboard/owner/companies', company._id]">{{ company.name }}</a>
-        <br>
-        <a [href]="company.website" target="_blank">{{ company.website }}</a>
-      </td>
-      <td>{{ company.address }}</td>
-      <td>
-        {{ company.averageRating }}
-        <span class="stars">
-          <ng-container *ngFor="let star of [0, 1, 2, 3, 4]; let i = index">
-            <span [ngClass]="{
-              'filled-star': i < floor(roundToQuarter(company.averageRating)),
-              'three-quarter-star': i === floor(roundToQuarter(company.averageRating)) && fractionalPart(roundToQuarter(company.averageRating)) === 0.75,
-              'half-star': i === floor(roundToQuarter(company.averageRating)) && fractionalPart(roundToQuarter(company.averageRating)) === 0.5,
-              'one-quarter-star': i === floor(roundToQuarter(company.averageRating)) && fractionalPart(roundToQuarter(company.averageRating)) === 0.25,
-              'empty-star': i > floor(roundToQuarter(company.averageRating)) || (i === floor(roundToQuarter(company.averageRating)) && fractionalPart(roundToQuarter(company.averageRating)) === 0)
-            }">&#9733;</span>
-          </ng-container>
-        </span>
-      </td>
-    </tr>
-  </tbody>
-</table>
+<div class="companies">
+  <h1>Companies</h1>
+  <div class="search-bar">
+      <input type="text" [(ngModel)]="searchQuery" placeholder="Search by name or address">
+      <button (click)="searchCompanies()">Search</button>
+  </div>
+  <table>
+    <thead>
+      <tr>
+        <th (click)="sortCompanies('name')" class="clickable">Name {{ getSortIcon('name') }}</th>
+        <th (click)="sortCompanies('address')" class="clickable">Address {{ getSortIcon('address') }}</th>
+        <th>Average Rating</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let company of companies">
+        <td>
+          <a [routerLink]="['/dashboard/owner/companies', company._id]">{{ company.name }}</a>
+          <br>
+          <a [href]="company.website" target="_blank">{{ company.website }}</a>
+        </td>
+        <td>{{ company.address }}</td>
+        <td>
+          {{ company.averageRating }}
+          <span class="stars">
+            <ng-container *ngFor="let star of [0, 1, 2, 3, 4]; let i = index">
+              <span [ngClass]="{
+                'filled-star': i < floor(roundToQuarter(company.averageRating)),
+                'three-quarter-star': i === floor(roundToQuarter(company.averageRating)) && fractionalPart(roundToQuarter(company.averageRating)) === 0.75,
+                'half-star': i === floor(roundToQuarter(company.averageRating)) && fractionalPart(roundToQuarter(company.averageRating)) === 0.5,
+                'one-quarter-star': i === floor(roundToQuarter(company.averageRating)) && fractionalPart(roundToQuarter(company.averageRating)) === 0.25,
+                'empty-star': i > floor(roundToQuarter(company.averageRating)) || (i === floor(roundToQuarter(company.averageRating)) && fractionalPart(roundToQuarter(company.averageRating)) === 0)
+              }">&#9733;</span>
+            </ng-container>
+          </span>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
