--- a/frontend/src/app/owner/owner-maintenance/owner-maintenance.component.css
+++ b/frontend/src/app/owner/owner-maintenance/owner-maintenance.component.css
@@ -7,7 +7,7 @@ table {
   }
   
   thead tr {
-    background-color: #48CAE4;
+    background-color: #89ca63;
     color: #ffffff;
     text-align: left;
     font-weight: bold;
@@ -33,15 +33,32 @@ table {
     background-color: #f1f1f1;
   }
   
-  button {
-    background-color: #48CAE4;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    cursor: pointer;
-    border-radius: 5px;
-  }
   
-  button:hover {
-    background-color: #ef476f;
-  }
+button {
+  background-color: #5ae448;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+button:hover {
+  background-color: #41c230;
+}
+.declineButton{
+  background-color: #f7567c;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  border-radius: 5px;
+}
+.declineButton:hover{
+  background-color: #e14a6d;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  border-radius: 5px;
+}
