--- a/frontend/src/app/register/register.component.html
+++ b/frontend/src/app/register/register.component.html
@@ -1,106 +1,111 @@
-<img src="/assets/images/auth/garden1.jpg" alt="image" style="position: absolute; top: 0; left: 0; height: 100%; width: 100%; object-fit: cover; box-sizing: border-box; margin: 0; padding: 0;" />
-
-<div style="position: relative; width: 100%; height: 100%; max-width: 500px; max-height: 600px; background: #EDF2EF; padding: 50px; border-radius: 25px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); overflow-y: auto; box-sizing: border-box;">
-  <h1 style="text-align: center; margin-top: 0; margin-bottom: 1em; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #333; font-size: 1.5em;">Vasa Masta-Vasa Basta</h1>
-
-  <div style="display: flex; justify-content: center; align-items: center;">
-    <p style="margin: 0; text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 1em; color: grey; font-style: italic;">{{message}}</p>
-    <ng-container *ngIf="(message !== 'Enter your credentials to continue') && (message !== 'Looks Good')">
-        <icon-warning-hex></icon-warning-hex>
-    </ng-container>
+<div style="display: flex; height: 100vh; width: 100vw; position: relative;">
+  
+  <!-- Left side with big text -->
+  <div style="width: 60%; display: flex; justify-content: flex-start; align-items: center; background: linear-gradient(to right, #008000, #80FF66); padding-left: 4em; padding-right: 4em; box-shadow: 4px 0 8px rgba(0,0,0,0.2);">
+    <div style="color: white;">
+      <h1 style="font-family: 'Roboto', sans-serif; color: white; font-size: 3.5em; font-weight: bold; margin-bottom: 0.5em; letter-spacing: 2px;text-shadow: 1px 1px 2px black;; ">Vasa Masta-Vasa Basta</h1>
+      <h2 style="font-family: 'Roboto', sans-serif; color: rgb(20, 29, 29); font-size: 2em; font-weight: 300; margin-top: 0; letter-spacing: 1.5px;text-shadow: 1px 1px 2px black;">- Elevate Your Outdoors -</h2>
+      <p style="font-family: 'Roboto', sans-serif; color: lightgray; font-size: 1em; margin-top: 1em; line-height: 1.5; text-shadow: 1px 1px 2px black;">
+        Welcome to your ultimate garden companion! Our app helps you schedule and manage all your garden tasks effortlessly.
+      </p>
+      <p style="font-family: 'Roboto', sans-serif; color: lightgray; font-size: 1em; margin-top: 1em; line-height: 1.5; text-shadow: 1px 1px 2px black;">
+        From watering schedules to plant care reminders, we ensure your garden thrives all year round.
+      </p>
+    </div>
   </div>
+  <!-- Right side for the form -->
+  <div style="width: 40%; display: flex; justify-content: center; align-items: flex-start; background: linear-gradient(45deg, #ffffff, #d3d3d3); padding: 2em; box-shadow: -4px 0 8px rgba(0,0,0,0.2); overflow-y: auto; height: 100vh;">
+    <div style="width: 100%; max-width: 500px; border-radius: 25px; padding: 2em;">
+      <h1 style="text-align: center; margin-top: 0; margin-bottom: 1em; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #333; font-size: 1.8em;">Register a new account</h1>
 
-  <form style="overflow: hidden;">
-          <div style="display: flex; justify-content: space-between;">
-            <div style="flex: 1; margin-right: 0.5em;">
-              <!-- Username -->
-              <label for="username" style="display: block; margin-bottom: 0.5em; font-size: 1em; font-family: 'Segoe UI', sans-serif;">Username</label>
-              <input [(ngModel)]="username" type="username" id="username" placeholder="Enter Username" name="username" style="width: 100%; padding: 0.5em; border: 1px solid #EDF2EF; border-radius: 5px; box-sizing: border-box; transition: border 0.3s ease;">
-            </div>
-            <div style="flex: 1; margin-left: 0.5em;">
-              <!-- Password -->
-              <label for="password" style="display: block; margin-bottom: 0.5em; font-size: 1em; font-family: 'Segoe UI', sans-serif;">Password</label>
-              <input [(ngModel)]="password" type="password" id="password" placeholder="Enter Password" name="password" style="width: 100%; padding: 0.5em; border: 1px solid #EDF2EF; border-radius: 5px; box-sizing: border-box; transition: border 0.3s ease;">
-            </div>
-          </div>
-        
-          <div style="display: flex; justify-content: space-between;">
-            <div style="flex: 1; margin-right: 0.5em;">
-              <!-- First Name -->
-              <label for="first_name" style="display: block; margin-bottom: 0.5em; font-size: 1em; font-family: 'Segoe UI', sans-serif;">First Name</label>
-              <input [(ngModel)]="first_name" type="text" id="first_name" placeholder="Enter First Name" name="first_name" style="width: 100%; padding: 0.5em; border: 1px solid #EDF2EF; border-radius: 5px; box-sizing: border-box; transition: border 0.3s ease;">
-            </div>
-            <div style="flex: 1; margin-left: 0.5em;">
-              <!-- Last Name -->
-              <label for="last_name" style="display: block; margin-bottom: 0.5em; font-size: 1em; font-family: 'Segoe UI', sans-serif;">Last Name</label>
-              <input [(ngModel)]="last_name" type="text" id="last_name" placeholder="Enter Last Name" name="last_name" style="width: 100%; padding: 0.5em; border: 1px solid #EDF2EF; border-radius: 5px; box-sizing: border-box; transition: border 0.3s ease;">
-            </div>
-          </div>
-        
-          <div style="display: flex; justify-content: space-between;">
-            <div style="flex: 1; margin-right: 0.5em;">
-              <!-- Gender -->
-              <label for="gender" style="display: block; margin-bottom: 0.5em; font-size: 1em; font-family: 'Segoe UI', sans-serif;">Gender</label>
-              <select [(ngModel)]="gender" id="gender" name="gender" style="width: 100%; padding: 0.5em; border: 1px solid #EDF2EF; border-radius: 5px; box-sizing: border-box; transition: border 0.3s ease;">
-                <option value="">Select Gender</option>
-                <option value="M">Male</option>
-                <option value="F">Female</option>
-              </select>
-            </div>
-            <div style="flex: 1; margin-left: 0.5em;">
-              <!-- Address -->
-              <label for="address" style="display: block; margin-bottom: 0.5em; font-size: 1em; font-family: 'Segoe UI', sans-serif;">Address</label>
-              <input [(ngModel)]="address" type="text" id="address" placeholder="Enter Address" name="address" style="width: 100%; padding: 0.5em; border: 1px solid #EDF2EF; border-radius: 5px; box-sizing: border-box; transition: border 0.3s ease;">
-            </div>
-          </div>
-        
-          <div style="display: flex; justify-content: space-between;">
-            <div style="flex: 1; margin-right: 0.5em;">
-              <!-- Phone Number -->
-              <label for="phone_number" style="display: block; margin-bottom: 0.5em; font-size: 1em; font-family: 'Segoe UI', sans-serif;">Phone Number</label>
-              <input [(ngModel)]="phone_number" type="text" id="phone_number" placeholder="Enter Phone Number" name="phone_number" style="width: 100%; padding: 0.5em; border: 1px solid #EDF2EF; border-radius: 5px; box-sizing: border-box; transition: border 0.3s ease;">
-            </div>
-            <div style="flex: 1; margin-left: 0.5em;">
-              <!-- Email -->
-              <label for="email" style="display: block; margin-bottom: 0.5em; font-size: 1em; font-family: 'Segoe UI', sans-serif;">Email</label>
-              <input [(ngModel)]="email" type="email" id="email" placeholder="Enter Email" name="email" style="width: 100%; padding: 0.5em; border: 1px solid #EDF2EF; border-radius: 5px; box-sizing: border-box; transition: border 0.3s ease;">
-            </div>
-          </div>
-        
-          <div style="display: flex; justify-content: space-between;">
-            <div style="flex: 1; margin-right: 0.5em;">
-                <!-- Profile Picture -->
-                <label for="profile_pic" style="display: block; margin-bottom: 0.5em; font-size: 1em; font-family: 'Segoe UI', sans-serif;">Profile Picture</label>
-                <input type="file" id="profile_pic" (change)="onFileSelected($event)" accept="image/jpeg, image/png" style="width: 100%; padding: 0.5em; border: 1px solid #EDF2EF; border-radius: 5px; box-sizing: border-box; transition: border 0.3s ease;">
-                <label *ngIf="profilePicPreview" >Profile Picture Preview:</label>
-                <img *ngIf="profilePicPreview" [src]="profilePicPreview" alt="Profile Picture Preview" style="margin-top: 1em; max-width: 100px; max-height: 100px; border: 1px solid #EDF2EF; border-radius: 5px;">
-            </div>
-        </div>
+      <div style="display: flex; justify-content: center; align-items: center;">
+        <p style="margin: 0; padding-bottom: 10%; text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 1em; color: rgba(0, 0, 0, 0.729); font-style: italic;">{{message}}</p>
+        <ng-container *ngIf="(message !== 'Enter your credentials to continue') && (message !== 'Looks Good')">
+            <icon-warning-hex></icon-warning-hex>
+        </ng-container>
+      </div>
 
-        <div style="display: flex; justify-content: space-between;">
-          <div style="flex: 1; margin: 0.5em; display: flex; align-items: center;">
-            <label for="creditCardNumber" style="margin-right: 0.5em;">Credit Card Number:</label>
-            <input type="text" id="creditCardNumber" name="creditCardNumber" [(ngModel)]="credit_card_number" (input)="validateCard($event)" style="flex: 1; margin-right: 0.5em;">
-            <img id="cardIcon" src="/assets/images/card/credit-card.png" alt="" style="display: inline; width: 50px; height: 30px;">
+      <form style="display: grid; grid-template-columns: 1fr 1fr; gap: 1em;">
+        <div style=" margin-bottom: 1em;">
+          <label for="username" style="display: block; margin-bottom: 0.5em; font-size: 1em; font-family: 'Segoe UI', sans-serif;">Username</label>
+          <div style="position: relative;">
+            <icon-user></icon-user>
+            <input [(ngModel)]="username" type="username" id="username" placeholder="Enter Username" name="username" style="width: 100%; padding: 1em; border: 1px solid #EDF2EF; border-radius: 5px; box-sizing: border-box; transition: border 0.3s ease;">
           </div>
         </div>
-          <!-- Type and Register Button remain as they were, not in a flex container -->
-          <div style="margin-bottom: 1em;">
-            <label for="type" style="display: block; margin-bottom: 0.5em; font-size: 1em; font-family: 'Segoe UI', sans-serif;">Type</label>
-            <select [(ngModel)]="type" id="type" name="type" style="width: 100%; padding: 1em; border: 1px solid #EDF2EF; border-radius: 5px; box-sizing: border-box; transition: border 0.3s ease;">
-              <option value="">Select Type</option>
-              <option value="owner">Owner</option>
-              <option value="decor">Decorator</option>
-            </select>
+          
+        <div>
+          <label for="password" style="display: block; margin-bottom: 0.5em; font-size: 1em; font-family: 'Segoe UI', sans-serif;">Password</label>
+          <div style="position: relative;">
+            <icon-lock-dots></icon-lock-dots>
+            <input [(ngModel)]="password" type="password" id="password" placeholder="Enter Password" name="password" style="width: 100%; padding: 1em; border: 1px solid #EDF2EF; border-radius: 5px; box-sizing: border-box; transition: border 0.3s ease;">
           </div>
+        </div>
+
+        <div>
+          <label for="first_name" style="display: block; margin-bottom: 0.5em; font-size: 1em; font-family: 'Segoe UI', sans-serif;">First Name</label>
+          <input [(ngModel)]="first_name" type="text" id="first_name" placeholder="Enter First Name" name="first_name" style="width: 100%; padding: 1em; border: 1px solid #EDF2EF; border-radius: 5px; box-sizing: border-box; transition: border 0.3s ease;">
+        </div>
+
+        <div>
+          <label for="last_name" style="display: block; margin-bottom: 0.5em; font-size: 1em; font-family: 'Segoe UI', sans-serif;">Last Name</label>
+          <input [(ngModel)]="last_name" type="text" id="last_name" placeholder="Enter Last Name" name="last_name" style="width: 100%; padding: 1em; border: 1px solid #EDF2EF; border-radius: 5px; box-sizing: border-box; transition: border 0.3s ease;">
+        </div>
+
+        <div>
+          <label for="gender" style="display: block; margin-bottom: 0.5em; font-size: 1em; font-family: 'Segoe UI', sans-serif;">Gender</label>
+          <select [(ngModel)]="gender" id="gender" name="gender" style="width: 100%; padding: 1em; border: 1px solid #EDF2EF; border-radius: 5px; box-sizing: border-box; transition: border 0.3s ease;">
+            <option value="">Select Gender</option>
+            <option value="M">Male</option>
+            <option value="F">Female</option>
+          </select>
+        </div>
+
+        <div>
+          <label for="address" style="display: block; margin-bottom: 0.5em; font-size: 1em; font-family: 'Segoe UI', sans-serif;">Address</label>
+          <input [(ngModel)]="address" type="text" id="address" placeholder="Enter Address" name="address" style="width: 100%; padding: 1em; border: 1px solid #EDF2EF; border-radius: 5px; box-sizing: border-box; transition: border 0.3s ease;">
+        </div>
+
+        <div>
+          <label for="phone_number" style="display: block; margin-bottom: 0.5em; font-size: 1em; font-family: 'Segoe UI', sans-serif;">Phone Number</label>
+          <input [(ngModel)]="phone_number" type="text" id="phone_number" placeholder="Enter Phone Number" name="phone_number" style="width: 100%; padding: 1em; border: 1px solid #EDF2EF; border-radius: 5px; box-sizing: border-box; transition: border 0.3s ease;">
+        </div>
+
+        <div>
+          <label for="email" style="display: block; margin-bottom: 0.5em; font-size: 1em; font-family: 'Segoe UI', sans-serif;">Email</label>
+          <input [(ngModel)]="email" type="email" id="email" placeholder="Enter Email" name="email" style="width: 100%; padding: 1em; border: 1px solid #EDF2EF; border-radius: 5px; box-sizing: border-box; transition: border 0.3s ease;">
+        </div>
+
+        <div style="grid-column: span 2; margin-bottom: 1em;">
+          <label for="profile_pic" style="display: block; margin-bottom: 0.5em; font-size: 1em; font-family: 'Segoe UI', sans-serif;">Profile Picture</label>
+          <input type="file" id="profile_pic" (change)="onFileSelected($event)" accept="image/jpeg, image/png" style="width: 100%; padding: 1em; border: 1px solid #EDF2EF; border-radius: 5px; box-sizing: border-box; transition: border 0.3s ease;">
+          <label *ngIf="profilePicPreview">Profile Picture Preview:</label>
+          <img *ngIf="profilePicPreview" [src]="profilePicPreview" alt="Profile Picture Preview" style="margin-top: 1em; max-width: 100px; max-height: 100px; border: 1px solid #EDF2EF; border-radius: 5px;">
+        </div>
+
+        <div style="grid-column: span 2; margin-bottom: 1em;">
+          <label for="creditCardNumber" style="display: block; margin-bottom: 0.5em; font-size: 1em; font-family: 'Segoe UI', sans-serif;">Credit Card Number</label>
+          <input type="text" id="creditCardNumber" name="creditCardNumber" [(ngModel)]="credit_card_number" (input)="validateCard($event)" style="width: 100%; padding: 1em; border: 1px solid #EDF2EF; border-radius: 5px; box-sizing: border-box; transition: border 0.3s ease;">
+          <img id="cardIcon" src="/assets/images/card/credit-card.png" alt="" style="display: inline; width: 50px; height: 30px;">
+        </div>
+
+        <div style="grid-column: span 2; margin-bottom: 1em;">
+          <label for="type" style="display: block; margin-bottom: 0.5em; font-size: 1em; font-family: 'Segoe UI', sans-serif;">Type</label>
+          <select [(ngModel)]="type" id="type" name="type" style="width: 100%; padding: 1em; border: 1px solid #EDF2EF; border-radius: 5px; box-sizing: border-box; transition: border 0.3s ease;">
+            <option value="">Select Type</option>
+            <option value="owner">Owner</option>
+            <option value="decor">Decorator</option>
+          </select>
+        </div>
         
-          <div style="text-align: center;">
-            <button (click)="register()" style="width: 100%; padding: 1em; border: none; background-color: #57C4E5;color:#EDF2EF; border-radius: 5px; cursor: pointer; font-size: 1em; transition: background-color 0.3s ease;">Register</button>
-          </div>
-        </form>
-        <div style="text-align: center;">
-          <h1 style="margin-top: 0; margin-top: 1.5em; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #333; font-size: 0.7em;">Already have an Account?</h1>
-          <a routerLink="" style="display: block; margin-top: 1; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color:  #0055ff9d; font-size: 0.9em;">Login</a>
+        <div style="grid-column: span 2; text-align: center;">
+          <button class="modern-button" (click)="register()" >Register</button>
+        </div>
+      </form>
+      <div style="text-align: center;">
+        <h1 style="margin-top: 0; margin-top: 1.5em; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #333; font-size: 0.7em;">Already have an Account?</h1>
+        <a routerLink="" style="display: block; margin-top: 1; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color:  #0055ff9d; font-size: 0.9em;">Login</a>
       </div>
     </div>
-  
+  </div>
+</div>
