--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,6 +1,17 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 /* You can add global styles to this file, and also import other style files */
-body{
+
+body {
     display: flex;
     justify-content: center;
+    height: 100%;
+    margin: 0;
+    background: -webkit-linear-gradient(to right, #ACB6E5, #74ebd5);  /* Chrome 10-25, Safari 5.1-6 */
+    background: radial-gradient(circle at 18.7% 37.8%, rgb(250, 250, 250) 0%, rgb(225, 234, 238) 90%);
+    font-family: "Gill Sans", sans-serif;
+}
+
+html {
+    height: 100%;
+    margin: 0;
 }
